--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -154,47 +154,66 @@
                 android:text="DATE"
                 android:textStyle="bold"/>
 
-            <CalendarView
-                android:id="@+id/filter_calendarview"
+            <TextView
+                android:id="@+id/filter_selectedDate_textview"
+                android:layout_below="@id/filter_date_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/filter_date_textview"
+                android:text="--/--/----"
+                android:textStyle="bold"
                 android:layout_alignParentStart="true"/>
 
-            <TimePicker
-            android:id="@+id/filter_timepicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/filter_calendarview"
-            android:layout_alignParentStart="true"
-            android:timePickerMode="spinner"/>
+            <!--<CalendarView-->
+                <!--android:id="@+id/filter_calendarview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/filter_date_textview"-->
+                <!--android:layout_alignParentStart="true" />-->
 
-            <Button
-                android:id="@+id/filter_cancel_button"
-                android:layout_width="150dp"
-                android:layout_weight="1"
+            <!--<TimePicker-->
+            <!--android:id="@+id/filter_timepicker"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/filter_selectedDate_textview"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:timePickerMode="spinner"-->
+            <!--/>-->
+            <!---->
+            <TextView
+                android:id="@+id/filter_selectedTime_textview"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancel"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="bottom|left"
+                android:layout_below="@id/filter_selectedDate_textview"
                 android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/filter_filter_button"
-                android:layout_alignParentBottom="true"
-                android:onClick="cancelFilters"/>
+                android:text="--:--"
+            />
+
+            <!--<Button-->
+                <!--android:id="@+id/filter_cancel_button"-->
+                <!--android:layout_width="150dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Cancel"-->
+                <!--android:layout_marginTop="20dp"-->
+                <!--android:layout_gravity="bottom|left"-->
+                <!--android:layout_alignParentStart="true"-->
+                <!--android:layout_alignTop="@+id/filter_filter_button"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:onClick="cancelFilters"/>-->
 
 
 
-            <Button
-                android:id="@+id/filter_filter_button"
-                android:layout_width="150dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Filter"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="bottom|right"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:onClick="applyFilters"/>
+            <!--<Button-->
+                <!--android:id="@+id/filter_filter_button"-->
+                <!--android:layout_width="150dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Filter"-->
+                <!--android:layout_marginTop="20dp"-->
+                <!--android:layout_gravity="bottom|right"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:onClick="applyFilters"/>-->
 
         </RelativeLayout>
     </ScrollView>
