--- a/app/src/main/res/menu/menu_action_bar.xml
+++ b/app/src/main/res/menu/menu_action_bar.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_search"
+        android:icon="@drawable/ic_search_24dp"
+        android:title="Search"
+        app:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
+        android:id="@+id/menu_filter"
+        android:icon="@drawable/ic_filter_funnel"
+        android:title="Filter"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/menu_hockeyapp_feedback"
         android:title="Feedback"
-        android:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"/>
 </menu>
