Fix the null returned from getActionView() on the menu item

--- a/app/src/main/res/menu/menu_action_bar.xml
+++ b/app/src/main/res/menu/menu_action_bar.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_search_24dp"
         android:title="Search"
         app:showAsAction="collapseActionView|ifRoom"
-        android:actionViewClass="android.support.v7.widget.SearchView"/>
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 
     <item
         android:id="@+id/menu_filter"
