Remove search activity, add calendar icon, add arrow on top-left of action bars

--- a/app/src/main/res/menu/menu_action_bar.xml
+++ b/app/src/main/res/menu/menu_action_bar.xml
@@ -17,6 +17,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/menu_calendar"
+        android:icon="@drawable/ic_calendar_24dp"
+        android:title="Calendar"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/menu_hockeyapp_feedback"
         android:title="Feedback"
         app:showAsAction="ifRoom"/>
