--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -1,55 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="de.tum.pom16.teamtba.reservationapp.activities.SearchResultsActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="79dp"
-            android:layout_weight="0.05">
-            <Button
-                android:id="@+id/searchResults_filter_button"
-                android:layout_gravity="right|top"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Filter"
-                android:padding="5dp"
-                android:onClick="filterSearchResults" />
-        </fragment>
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_below="@id/searchResults_filter_button"
-            android:layout_height="79dp"
-            android:id="@+id/searchResults_listview"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.05" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    </LinearLayout>
-</FrameLayout>
+    </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/content_search_results" />
 
-    <!--map:cameraTargetLat="48.137524"
-    map:cameraTargetLng="11.576466"
-    map:cameraZoom="15"
-    map:uiRotateGestures="true"
-    map:uiTiltGestures="true"
-    map:uiScrollGestures="true"
-    map:uiZoomGestures="true"
-    map:mapType="normal"
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--android:src="@android:drawable/ic_dialog_email" />-->
 
-    map:cameraTargetLat="48.137524"
-            map:cameraTargetLng="11.576466"
-            map:cameraZoom="15"/
-    -->
-
+</android.support.design.widget.CoordinatorLayout>
