--- a/app/src/main/res/menu/menu_action_bar.xml
+++ b/app/src/main/res/menu/menu_action_bar.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="de.tum.pom16.teamtba.reservationapp.activities.SearchResultsActivity">
 
     <item
         android:id="@+id/menu_search"
@@ -27,3 +27,5 @@
         android:title="Feedback"
         app:showAsAction="ifRoom"/>
 </menu>
+
+    <!--android:orderInCategory="100"-->
