--- a/app/src/main/res/layout/content_search_results.xml
+++ b/app/src/main/res/layout/content_search_results.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="de.tum.pom16.teamtba.reservationapp.activities.SearchResultsActivity"
     tools:showIn="@layout/activity_search_results">
@@ -16,25 +13,26 @@
         xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="79dp"
-        android:layout_weight="0.05">
+        android:layout_height="200dp" >
 
-    <Button
-        android:id="@+id/searchResults_filter_button"
-        android:layout_gravity="right|top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Filter"
-        android:padding="5dp"
-        android:onClick="filterSearchResults" />
+    <!--<Button-->
+        <!--android:id="@+id/searchResults_filter_button"-->
+        <!--android:layout_gravity="right|top"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Filter"-->
+        <!--android:padding="5dp"-->
+        <!--android:onClick="filterSearchResults" />-->
     </fragment>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_below="@id/searchResults_filter_button"
-        android:layout_height="79dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:id="@+id/searchResults_listview"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.05" />
-</LinearLayout>
+        android:layout_below="@id/map" />
+</RelativeLayout>
+
+    <!--android:layout_below="@id/searchResults_filter_button"-->
