Add basic price and rating dialog

--- a/app/src/main/res/layout/content_filter_results.xml
+++ b/app/src/main/res/layout/content_filter_results.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
-            android:text="Price"
+            android:text="Price (max)"
             android:layout_toRightOf="@id/filter_icon_price"
             android:layout_below="@id/filter_location_textview"
             android:layout_alignBottom="@id/filter_icon_price"
@@ -90,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
-            android:text="Rating"
+            android:text="Rating (min)"
             android:layout_toRightOf="@id/filter_icon_rating"
             android:layout_below="@id/filter_price_textview"
             android:layout_alignBottom="@id/filter_icon_rating"
