--- a/app/src/main/res/layout/fragment_restuarant_reviews.xml
+++ b/app/src/main/res/layout/fragment_restuarant_reviews.xml
@@ -6,11 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.tum.pom16.teamtba.reservationapp.activities.RestaurantOverviewActivity$PlaceholderFragment">
+    tools:context=".activities.RestaurantOverviewActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="REVIEWS"/>
 
 </RelativeLayout>
