--- a/app/src/main/res/layout/fragment_restaurant_details.xml
+++ b/app/src/main/res/layout/fragment_restaurant_details.xml
@@ -12,6 +12,6 @@
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HELLO YO, DETAILS"/>
+        android:text="@string/large_text"/>
 
 </RelativeLayout>
