--- a/app/src/main/res/layout/fragment_restaurant_details.xml
+++ b/app/src/main/res/layout/fragment_restaurant_details.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".customviews.PlaceholderFragment">
+    >
+    <!--tools:context=".customviews.RestaurantDetailsFragment"-->
 
     <TextView
         android:id="@+id/section_label"
