--- a/app/src/main/res/layout/fragment_restuarant_reviews.xml
+++ b/app/src/main/res/layout/fragment_restuarant_reviews.xml
@@ -6,7 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.RestaurantOverviewActivity$PlaceholderFragment">
+    >
+
+    <!--tools:context=".customviews.RestaurantReviewsFragment"-->
 
     <TextView
         android:id="@+id/section_label"
