--- a/app/src/main/res/layout/fragment_restaurant_details.xml
+++ b/app/src/main/res/layout/fragment_restaurant_details.xml
@@ -2,17 +2,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    >
+    android:paddingBottom="@dimen/activity_vertical_margin">
     <!--tools:context=".customviews.RestaurantDetailsFragment"-->
 
-    <TextView
-        android:id="@+id/section_label"
+    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--xmlns:map="http://schemas.android.com/apk/res-auto"-->
+        <!--android:id="@+id/restaurant_details_map_1"-->
+        <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="150dp" />-->
+
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapview"
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
+    </com.google.android.gms.maps.MapView>
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/large_text"/>
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_below="@id/mapview"
+        >
+
+        <TextView
+            android:id="@+id/restaurant_details_address_firstLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Freisinger Landstr. 86"
+            android:textStyle="bold"
+            android:layout_alignParentLeft="true"/>
+
+        <TextView
+            android:id="@+id/restaurant_details_address_secondLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="80939 Munchen, DE"
+            android:layout_below="@id/restaurant_details_address_firstLine"
+            android:layout_alignParentLeft="true"/>
+
+        <TextView
+            android:id="@+id/restaurant_details_distance_firstLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2 km"
+            android:textStyle="bold"
+            android:layout_alignTop="@id/restaurant_details_address_firstLine"
+            android:layout_alignParentRight="true"/>
+
+        <TextView
+            android:id="@+id/restaurant_details_distance_secondLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="away"
+            android:layout_below="@id/restaurant_details_distance_firstLine"
+            android:layout_alignTop="@id/restaurant_details_address_secondLine"
+            android:layout_alignParentRight="true"/>
+
+
+    </RelativeLayout>
+
+
+    <!--<TextView-->
+        <!--android:id="@+id/section_label"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/large_text"/>-->
 
 </RelativeLayout>
