--- a/app/src/main/res/layout/fragment_restaurant_details.xml
+++ b/app/src/main/res/layout/fragment_restaurant_details.xml
@@ -1,135 +1,140 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin">
-
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapview"
-        android:layout_width="match_parent"
-        android:layout_height="150dp">
-    </com.google.android.gms.maps.MapView>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_below="@id/mapview"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
-        <TextView
-            android:id="@+id/restaurant_details_address_firstLine"
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapview"
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
+        </com.google.android.gms.maps.MapView>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Freisinger Landstr. 86"
-            android:textStyle="bold"
-            android:layout_alignParentLeft="true"/>
-
-        <TextView
-            android:id="@+id/restaurant_details_address_secondLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="80939 Munchen, DE"
-            android:layout_below="@id/restaurant_details_address_firstLine"
-            android:layout_alignParentLeft="true"/>
-
-        <TextView
-            android:id="@+id/restaurant_details_distance_firstLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2 km"
-            android:textStyle="bold"
-            android:layout_alignTop="@id/restaurant_details_address_firstLine"
-            android:layout_alignParentRight="true"/>
-
-        <TextView
-            android:id="@+id/restaurant_details_distance_secondLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="away"
-            android:layout_below="@id/restaurant_details_distance_firstLine"
-            android:layout_alignTop="@id/restaurant_details_address_secondLine"
-            android:layout_alignParentRight="true"/>
-
-        <!-- end of map and address section -->
-
-        <ImageView
-            android:id="@+id/restaurant_details_icon_cuisine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:src="@drawable/ic_restaurant_menu_24dp"
-            android:layout_below="@id/restaurant_details_address_secondLine"
-            />
+            android:layout_below="@id/mapview"
+            >
 
-        <TextView
-            android:id="@+id/restaurant_details_cuisine_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cuisine"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:layout_toRightOf="@id/restaurant_details_icon_cuisine"
-            android:layout_alignBottom="@id/restaurant_details_icon_cuisine"/>
+            <TextView
+                android:id="@+id/restaurant_details_address_firstLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Freisinger Landstr. 86"
+                android:textStyle="bold"
+                android:layout_alignParentLeft="true"/>
 
-        <ImageView
-            android:id="@+id/restaurant_details_icon_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:layout_below="@id/restaurant_details_icon_cuisine"
-            android:src="@drawable/ic_euro_symbol_24px"/>
+            <TextView
+                android:id="@+id/restaurant_details_address_secondLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="80939 Munchen, DE"
+                android:layout_below="@id/restaurant_details_address_firstLine"
+                android:layout_alignParentLeft="true"/>
 
-        <TextView
-            android:id="@+id/restaurant_details_price_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price"
-            android:layout_toRightOf="@id/restaurant_details_icon_price"
-            android:layout_below="@id/restaurant_details_cuisine_textview"
-            android:layout_alignBottom="@id/restaurant_details_icon_price"
-            />
+            <TextView
+                android:id="@+id/restaurant_details_distance_firstLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2 km"
+                android:textStyle="bold"
+                android:layout_alignTop="@id/restaurant_details_address_firstLine"
+                android:layout_alignParentRight="true"/>
 
-        <!-- phone, website - add later when modifying the model -->
-        <!-- opening hours -->
+            <TextView
+                android:id="@+id/restaurant_details_distance_secondLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="away"
+                android:layout_below="@id/restaurant_details_distance_firstLine"
+                android:layout_alignTop="@id/restaurant_details_address_secondLine"
+                android:layout_alignParentRight="true"/>
 
-        <ImageView
-            android:id="@+id/restaurant_details_icon_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/restaurant_details_icon_price"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:src="@drawable/ic_description_24dp"/>
+            <!-- end of map and address section -->
 
-        <TextView
-            android:id="@+id/restaurant_details_description_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description"
-            android:layout_toRightOf="@id/restaurant_details_icon_description"
-            android:layout_below="@id/restaurant_details_price_textview"
-            android:layout_alignBottom="@id/restaurant_details_icon_description"
-            />
+            <ImageView
+                android:id="@+id/restaurant_details_icon_cuisine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:src="@drawable/ic_restaurant_menu_24dp"
+                android:layout_below="@id/restaurant_details_address_secondLine"
+                />
+
+            <TextView
+                android:id="@+id/restaurant_details_cuisine_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cuisine"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:layout_toRightOf="@id/restaurant_details_icon_cuisine"
+                android:layout_alignBottom="@id/restaurant_details_icon_cuisine"/>
+
+            <ImageView
+                android:id="@+id/restaurant_details_icon_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:layout_below="@id/restaurant_details_icon_cuisine"
+                android:src="@drawable/ic_euro_symbol_24px"/>
+
+            <TextView
+                android:id="@+id/restaurant_details_price_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price"
+                android:layout_toRightOf="@id/restaurant_details_icon_price"
+                android:layout_below="@id/restaurant_details_cuisine_textview"
+                android:layout_alignBottom="@id/restaurant_details_icon_price"
+                />
+
+            <!-- phone, website - add later when modifying the model -->
+            <!-- opening hours -->
+
+            <ImageView
+                android:id="@+id/restaurant_details_icon_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/restaurant_details_icon_price"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:src="@drawable/ic_description_24dp"/>
+
+            <TextView
+                android:id="@+id/restaurant_details_description_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:layout_toRightOf="@id/restaurant_details_icon_description"
+                android:layout_below="@id/restaurant_details_price_textview"
+                android:layout_alignBottom="@id/restaurant_details_icon_description"
+                />
 
 
-    </RelativeLayout>
+        </RelativeLayout>
 
-    <!--<View-->
+        <!--<View-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="2dp"-->
         <!--android:background="?android:attr/listDivider"/>-->
 
+    </RelativeLayout>
+
+</android.support.v4.widget.NestedScrollView>
 
 
-    <!--<TextView-->
-        <!--android:id="@+id/section_label"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/large_text"/>-->
 
-</RelativeLayout>
+
