Add custom drawable for progress bar (needed beside each start in ratings, to indicate the number of reviews)

--- a/app/src/main/res/layout/fragment_restuarant_reviews.xml
+++ b/app/src/main/res/layout/fragment_restuarant_reviews.xml
@@ -10,10 +10,20 @@
 
     <!--tools:context=".customviews.RestaurantReviewsFragment"-->
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
+    <!--<TextView-->
+        <!--android:id="@+id/section_label"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="REVIEWS"/>-->
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="REVIEWS"/>
+        style="?android:attr/progressBarStyleHorizontal"
+        android:progressDrawable="@drawable/custom_progess_bar_horizontal"
+        android:layout_margin="10dp"
+        android:max="100"
+        android:progress="40" />
 
 </RelativeLayout>
